# Job-SkillSet-Demand-Analysis

./: README.md  pyproject.toml
SQLScripts/: drawSQL-mysql-export-2025-03-10.sql
Tableau WB/: JobListingAnalysis.twbx
data/clean/: cleanedcsv_utf8.csv  cleanedv5_jobListingsData.csv  cleanedv6_jobListingsData.csv  cleanedv7_jobListingsData.csv  cleanedv8_country_title.csv
data/clean/.ipynb_checkpoints/: cleaned_jobListingsData-checkpoint.csv
data/raw/json/Germany/: jobs_data_page14.json
data/raw/json/Spain/: jobs_data_DA_Spain.json  jobs_data_DI_Spain.json  jobs_data_DS_Spain.json  jobs_data_MA_FA_Spaain.json  jobs_data_MA_FA_Spain.json  jobs_data_MA_Spain.json  jobs_data_Markeing_Spain.json  jobs_data_Spain.json  jobs_data_Spain_DAI_DA_DS_DE.json  jobs_data_dAin_spain.json
notebooks/: CleanAndReFormatJsonData.ipynb  DataAnalysisForJobListings.ipynb  KPIsDesignAndHypothesisTesting.ipynb  functions.py  functionsForFormatting.py  linkedin_cookies.pkl
notebooks/.ipynb_checkpoints/: CleanJsonDataToCsv-checkpoint.ipynb  DataAnalysisForJobListings-checkpoint.ipynb  GetLinkedInJobListings-checkpoint.ipynb  KPIsDesignAndHypothesisTesting-checkpoint.ipynb  functionsForDataAnalysis-checkpoint.py
