[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "selenium>=4.0.0",  # Added Selenium
    "webdriver_manager>=4.0.0",
    "langdetect>=1.0.9",
    "wordcloud>=1.9.4",
    "statsmodels>=0.14.4",
    "matplotlib-venn>=1.1.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

